small bugs solved, logout works now, error messages are visible for the user when user tries to login

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@
 }
 
 .card-height-width:hover {
-    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.2), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.17), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
 .no-style-on-focus:focus {
